--- a/kelinci/index.css
+++ b/kelinci/index.css
@@ -5,126 +5,137 @@
 body {
   font-family: sans-serif;
   overflow-x: hidden;
-  height: 1000px;
-}
-/* Font */
-@font-face {
-  font-family: De Valencia;
-  src: url("../Font/De\Valencia\\(beta\).otf") format("truetype");
-}
-/* End Font */
-.home {
-  width: 100%;
-  /* height: 550px; */
-  height: 625px;
-  background-image: url(../img/Jam2.jpg);
-  background-size: cover;
-  background-position-y: -100px;
-}
-.header {
-  width: 100%;
-  height: 50px;
-  display: flex;
-}
-.header h2 {
-  margin-left: 200px;
-  display: flex;
-  align-items: flex-end;
-}
-/* nav */
-nav {
-  display: flex;
-  background-color: black;
-  justify-content: space-evenly;
-  /* padding: 20px 0; */
-  height: 70px;
-  align-items: center;
-  width: 75%;
-  margin: 5px auto;
-  border-radius: 50px;
-  border: 2px solid gold;
-}
-h1 {
-  color: rgb(255, 217, 0);
-  font-family: De Valencia;
-}
-h2 {
-  color: gold;
 }
 
-nav ul {
+nav {
+  display: flex;
+  background: linear-gradient(to right, black 70%, gold);
+  justify-content: space-around;
+  /* padding: 20px 0; */
+  height: 80px;
+  align-items: center;
+}
+/* h1 {
+  color: gold;
+  font-family: "Courier New", Courier, monospace;
+  margin-right: 40px;
+} */
+.judul {
+  width: 200px;
+  height: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.logo img {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 10px;
+}
+.judul .loginless {
+  font-size: 30px;
+  background-color: rey;
+  color: gold;
+  font-family: "De Valencia";
+  text-decoration: none;
+}
+nav .menu {
   display: flex;
   list-style: none;
   width: 40%;
   justify-content: space-between;
 }
-nav ul li {
-  padding: 8px 5px 8px 5px;
+nav .menu li {
+  margin-top: 10px;
+  padding: 7px;
   box-sizing: border-box;
 }
 
-nav ul li a {
+nav .menu li a {
   color: gold;
   text-decoration: none;
-  padding: 10px 5px 10px 5px;
+  padding: 9px 5px 9px 5px;
   box-sizing: border-box;
+  font-family: De Valencia;
 }
-nav ul li:hover {
+/* nav .menu li:hover {
   background-color: gold;
-  border-radius: 50px;
-}
-nav ul li a:hover {
-  color: white;
-  text-decoration: none;
-  background-color: black;
-  transition: 1s;
-  border-radius: 50px;
-}
-/* SEARCH */
-
-.search input {
-  border-radius: 50px;
-  padding: 10px;
-  height: 30px;
-  background-color: gold;
-  border: 1px solid black;
-}
-
-/* END SEARCH */
-/* end nav */
-
-/* DISC */
-.mulai {
-  width: 300px;
-  height: 200px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-left: 15%;
-  margin-top: 50px;
-}
-.mulai h3 {
-  color: gold;
-  font-size: 30px;
-}
-.mulaiBelanja {
-  width: 50%;
-  height: 50px;
-  background-color: yellow;
-  border-top-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-
-  box-sizing: border-box;
-}
-.mulaiBelanja h3 {
-  text-align: center;
-  line-height: 50px;
+} */
+nav .menu li a:hover {
   color: black;
-  font-size: 20px;
+  text-decoration: none;
+  background-color: gold;
+  transition: 0.5s;
+  border-radius: 50px;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+/* Dropdown */
+
+.profil {
+  width: 150px;
+  height: 60%;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  border-radius: 50px;
+  position: relative;
+  left: 100px;
+  z-index: 1001;
+}
+.fotoProf {
+  width: 40px;
+  height: 40px;
+  background-image: url(../img/g1.jpg);
+  background-size: cover;
+  border-radius: 50%;
+
+  box-sizing: border-box;
+}
+.namaProf {
+  font-size: 15px;
+  color: white;
+  margin-top: 6px;
+}
+.dropbar {
+  width: 10px;
+  height: 10px;
+  background-color: white;
+  margin-bottom: 1px;
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+  border-top-left-radius: 50%;
+  transform: rotate(-50deg);
 }
 
+.ulDrop {
+  width: 100px;
+  background-color: rgba(110, 110, 110, 0.9);
+  right: 23px;
+  top: 48px;
+  position: absolute;
+  display: none;
+  z-index: 1000;
+}
+.ulDrop .liDrop {
+  color: black;
+  list-style: none;
+}
+.ulDrop .liDrop .link2 {
+  text-decoration: none;
+  color: white;
+  transition: 1s;
+  transform: rotate(360deg);
+}
+
+.ulDrop .liDrop .login:hover {
+  color: lime;
+}
+.ulDrop .liDrop .logout:hover {
+  color: rgb(255, 0, 0);
+}
 /* responsive */
 
 /* tablet */
