--- a/kelinci/index.css
+++ b/kelinci/index.css
@@ -22,8 +22,7 @@ nav {
 } */
 .judul {
   width: 200px;
-  height: 100%;
-
+  height: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -45,15 +44,18 @@ nav .menu {
   list-style: none;
   width: 40%;
   justify-content: space-between;
+
+  margin-top: 12px;
 }
 nav .menu li {
-  margin-top: 10px;
+  margin-top: 5px;
   padding: 7px;
   box-sizing: border-box;
 }
 
 nav .menu li a {
   color: gold;
+  font-size: 18px;
   text-decoration: none;
   padding: 9px 5px 9px 5px;
   box-sizing: border-box;
@@ -102,12 +104,13 @@ nav .menu li a:hover {
 .dropbar {
   width: 10px;
   height: 10px;
-  background-color: white;
-  margin-bottom: 1px;
-  border-bottom-right-radius: 50%;
-  border-bottom-left-radius: 50%;
-  border-top-left-radius: 50%;
-  transform: rotate(-50deg);
+  background-color: gold;
+  margin-bottom: 18px;
+  border-bottom-right-radius: 10%;
+  border-bottom-left-radius: 50px;
+  border-top-left-radius: 10%;
+  transform: rotate(180deg);
+  cursor: pointer;
 }
 
 .ulDrop {
